<resources>
    <!--<string name="app_name">温泉旅游手持系统</string>-->
    <string name="app_name">环企手持逸云版</string>
    <string name="login">银科环企(苏州)软件有限公司</string>
    <!--<string name="login">中国温泉旅游协会</string>-->
    <!-- Strings related to login -->

    <!--登录页面-->
    <!--用户名-->
    <!--用户名输入Hint-->
    <string name="name_user_edit">请输入用户名</string>
    <!--密码-->
    <!--密码输入Hint-->
    <string name="password_user_edit">请输入密码</string>
    <!--登录按钮-->
    <string name="name_login_btn">登录</string>
    <!--设置按钮-->
    <string name="name_set_btn">设置</string>

    <!--设置页面-->
    <!--IP地址-->

    <!--端口号-->

    <!--景区编码-->

    <!--景区秘钥-->

    <!--终端ID-->

    <!--终端名称-->


    <!--确认按钮-->
    <!--取消按钮-->

    <!--退票页面-->
    <string name="search_return_hint">请输入退款单号</string>
    <string name="orderCode_return_tv">订单编号:</string>
    <!--付款方式-->
    <string name="payType_return_tv">付款方式:</string>
    <!--退款金额-->
    <!--取消-->
    <string name="cancel_return_btn">取消</string>
    <!--确认-->
    <string name="confirm_return_btn">确认</string>

    <!--支付页面-->
    <!--title-->


    <!--支付页面-->
    <!--title-->
    <string name="title_pay_tv">确认订单</string>

    <!--应收金额-->
    <string name="shouldMoney_pay_tv">应收金额:</string>
    <!--实收金额-->
    <string name="actualMoney_pay_tv">实收金额:</string>

    <string name="orderNumber_team">订单号:</string>
    <string name="playTime_team">游玩日期:</string>
    <string name="payType">是否支付:</string>
    <string name="shouldAllCount">是否打印:</string>
    <string name="actualAllCount">支付类型:</string>
    <string name="shouldMoney">应付总金额:</string>
    <string name="actualMoney">旅行社:</string>

    <!-- ID Card -->
    <string name="idcard_czz">操作中</string>
    <string name="idcard_ljdkq">连接读卡器...</string>
    <string name="idcard_hqsfzxx">获取身份证信息</string>

    <string name="fm_Stime">开始日期</string>
    <string name="fm_Etime">结束日期</string>
    <string name="fm_ticketName">门票名称</string>
    <string name="fm_oderNUm">订票数量</string>
    <string name="fm_OrderCode">订单号</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
