<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <CheckBox
            android:id="@+id/determine_chekbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:minHeight="38dp"
            android:minWidth="32dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_source_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/determine_chekbox"
            android:background="@android:color/white"
            android:drawablePadding="10dp"
            android:text="@string/fm_OrderCode"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/activity_goods_15"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tv_store_edtor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:background="@null"
            android:text="编辑"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:background="#ececec"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/adp_STime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/fm_Stime"
            android:textColor="@color/colorBlack"
            />

        <TextView
            android:layout_width="0dp"
            android:id="@+id/adp_SEime"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/fm_Etime"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:id="@+id/adp_ticketName"
            android:text="@string/fm_ticketName"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/adp_ticketNum"
            android:singleLine="true"
            android:text="@string/fm_oderNUm"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>
</LinearLayout>