<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/actualMoney"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_lxs_Team"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginLeft="5dp"
                android:textSize="14sp"
                android:text=" "
                android:textColor="#000000"
                android:padding="8dp"
                />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#cecece"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/orderNumber_team"
                android:textSize="16sp"
                android:textColor="#000000"
                />
            <TextView
                android:id="@+id/text_OrderNum_Team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text=""
                android:layout_marginLeft="5dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:padding="8dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/playTime_team"
                android:textColor="#000000"
                android:textSize="16sp"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_playTime_team"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_marginLeft="5dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text=" "
                android:padding="8dp"
                />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#cecece"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/actualAllCount"
                android:textColor="#000000"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/text_PayTYE_team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_marginLeft="5dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:padding="8dp"
                />
        </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/payType"
                android:textSize="16sp"
                android:textColor="#000000"
                />
            <TextView
                android:id="@+id/text_PayType_Team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_marginLeft="5dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:padding="8dp"
                />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#cecece"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/shouldAllCount"
                android:textSize="16sp"
                android:textColor="#000000"
                />
            <TextView
                android:id="@+id/text_ISPrint_Team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_marginLeft="5dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:padding="8dp"
                />
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shouldMoney"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/text_ShouldMoney_Team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_marginLeft="5dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:padding="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            </LinearLayout>
        </LinearLayout>





</LinearLayout>
