<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89A0CC"
    tools:context="com.example.tps900.tps900.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginTop="37dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/activity_main2"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/button_cost_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="注册有效期已经到期，请联系系统供应商"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/main_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_nameAndPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/separation_distance_80"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <ImageView
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/user" />

            <EditText
                android:id="@+id/edit_userName"
                android:layout_width="@dimen/separation_distance_200"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/separation_distance_8"
                android:text=""
                android:layout_marginTop="@dimen/separation_distance_8"
                android:background="@null"
                android:hint="@string/name_user_edit"
                android:padding="@dimen/separation_distance_3"
                android:textColorHint="@color/colorHint_userInfo"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_16"/>

        </LinearLayout>

        <View
            android:layout_width="240dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/separation_distance_10"
            android:background="@color/white_text_color" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/separation_distance_35"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/password" />

            <EditText
                android:id="@+id/edit_Password"
                android:layout_width="@dimen/separation_distance_200"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/separation_distance_8"
                android:text=""
                android:layout_marginTop="@dimen/separation_distance_8"
                android:layout_toRightOf="@+id/img_icon"
                android:background="@null"
                android:hint="@string/password_user_edit"
                android:inputType="textPassword"
                android:padding="@dimen/separation_distance_3"
                android:textColorHint="@color/colorHint_userInfo"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_16"/>

            <ImageButton
                android:id="@+id/img_eye"
                android:layout_width="25dp"
                android:layout_height="15dp"
                android:layout_alignEnd="@+id/edit_Password"
                android:layout_gravity="center"
                android:layout_marginLeft="-35dp"
                android:layout_marginTop="@dimen/separation_distance_8"
                android:background="@drawable/eye_password"
                android:onClick="onViewClicked" />
        </LinearLayout>

        <View
            android:layout_width="240dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/separation_distance_10"
            android:background="@color/white_text_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_nameAndPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/separation_distance_40"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="@drawable/button_bgd"
            android:onClick="onViewClicked"
            android:text="@string/name_login_btn"
            android:textColor="@color/white_text_color" />

        <Button
            android:id="@+id/btn_set"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/separation_distance_45"
            android:background="@drawable/button_bgd"
            android:onClick="onViewClicked"
            android:text="@string/name_set_btn"
            android:textColor="@color/white_text_color" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.inputmethodservice.KeyboardView
            android:id="@+id/schemas_key_keyboard_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#bdbdbd"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:keyBackground="@drawable/key_selece"
            android:keyPreviewLayout="@layout/key_layout"
            android:keyTextColor="#424242"
            android:shadowRadius="0.5"
            android:visibility="gone" />

    </RelativeLayout>


</RelativeLayout>
